--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
 		<log4j.version>2.8.2</log4j.version>
 		<xstream.version>1.4.10</xstream.version>
 		<cache-api.version>1.1.0</cache-api.version>
-		<ehcache.version>3.5.2</ehcache.version>	
-		<derby.version>10.14.2.0</derby.version>			
+		<ehcache.version>3.5.2</ehcache.version>
+		<derby.version>10.14.2.0</derby.version>
+		<activemq.version>5.15.3</activemq.version>
 	</properties>
 
 	<dependencies>
@@ -63,6 +64,11 @@
 			<version>${springframework.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>${springframework.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>${xstream.version}</version>
@@ -76,7 +82,12 @@
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 			<version>${ehcache.version}</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+			<version>${activemq.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derbyclient</artifactId>
