--- a/src/main/resources/musiclibrarytoolsspring.properties
+++ b/src/main/resources/musiclibrarytoolsspring.properties
@@ -1,9 +1,16 @@
 xmlprovider=jaxb
+database=derby
 
 derby.url=jdbc:derby://localhost:1527/musiclibrarydb
 derby.username=musiclibrary
 derby.password=musiclibrary
 derby.driver=org.apache.derby.jdbc.ClientDriver
+
+hsql.url=jdbc:hsqldb:hsql://localhost/musiclibrarydb
+hsql.username=musiclibrary
+hsql.password=musiclibrary
+hsql.driver=org.hsqldb.jdbc.JDBCDriver
+
 
 albumdir=data/albums
 
