Property clean-up

--- a/src/main/resources/musiclibrarytoolsspring.properties
+++ b/src/main/resources/musiclibrarytoolsspring.properties
@@ -1,4 +1,4 @@
-xmlprovider=jaxb
+xmlprovider=xstream
 database=derby
 
 derby.url=jdbc:derby://localhost:1527/musiclibrarydb
@@ -11,24 +11,6 @@ hsql.username=musiclibrary
 hsql.password=musiclibrary
 hsql.driver=org.hsqldb.jdbc.JDBCDriver
 
-
 albumdir=data/albums
 
-
-#pmaxmldir=data/pmaxml
-#mp3dir=data/MP3/
-
-#Derby
-#jdbc.url.derby=jdbc:derby://localhost:1527/musiclibrarydb;user=musiclibrary;password=musiclibrary
-
-#Debug logging
-#jdbc.url.derby=jdbc:derby://localhost:1527/musiclibrarydb;user=musiclibrary;password=musiclibrary;traceFile=logs/jdbctrace.log
-
-#MySQL
-#jdbc.url.mysql=jdbc:mysql://localhost/musiclibrarydb?user=musiclibrary&password=musiclibrary&serverTimezone=US/Eastern
-
-#HyperSQL
-#jdbc.url.hsql=jdbc:hsqldb:hsql://localhost/musiclibrarydb;user=musiclibrary;password=musiclibrary
-
-#ActiveMQ
-#activemq.destination=MUSICLIBRARY.SONG
+activemq.destination=MUSICLIBRARY.SONG
