--- a/src/main/resources/musiclibrarytoolsspring.properties
+++ b/src/main/resources/musiclibrarytoolsspring.properties
@@ -1,4 +1,4 @@
-xmlprovider=xstream
+xmlprovider=jaxb
 database=derby
 
 derby.url=jdbc:derby://localhost:1527/musiclibrarydb
@@ -10,6 +10,8 @@ hsql.url=jdbc:hsqldb:hsql://localhost/musiclibrarydb
 hsql.username=musiclibrary
 hsql.password=musiclibrary
 hsql.driver=org.hsqldb.jdbc.JDBCDriver
+
+mongo.db=musiclibrary
 
 albumdir=data/albums
 
