--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id "org.sonarqube" version "2.6"
 }
 
-version = '1.0'
+version = '1.2.5-SNAPSHOT'
 
 apply plugin: 'java'
 sourceCompatibility = 1.8
@@ -16,7 +16,7 @@ repositories {
 
 ext {
 	log4jVersion = '2.8.2'
-	springVersion = '4.3.17.RELEASE'
+	springVersion = '5.0.8.RELEASE'
 }
 
 dependencies {
@@ -33,7 +33,7 @@ dependencies {
     compile "org.springframework:spring-jms:${springVersion}"
     
     compile 'com.thoughtworks.xstream:xstream:1.4.10'
-    compile "com.fasterxml.jackson.core:jackson-databind:2.9.5" 
+    compile "com.fasterxml.jackson.core:jackson-databind:2.9.6"
     compile 'javax.cache:cache-api:1.1.0'
     compile 'org.ehcache:ehcache:3.5.2'
     compile 'org.apache.activemq:activemq-client:5.15.3'
