--- a/src/main/resources/musiclibrarytoolsspring.properties
+++ b/src/main/resources/musiclibrarytoolsspring.properties
@@ -6,6 +6,11 @@ derby.username=musiclibrary
 derby.password=musiclibrary
 derby.driver=org.apache.derby.jdbc.ClientDriver
 
+mysql.url=jdbc:mysql://localhost/musiclibrarydb
+mysql.username=musiclibrary
+mysql.password=musiclibrary
+mysql.driver=com.mysql.jdbc.Driver
+
 hsql.url=jdbc:hsqldb:hsql://localhost/musiclibrarydb
 hsql.username=musiclibrary
 hsql.password=musiclibrary
