--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>dk.purplegreen.musiclibrary</groupId>
 	<artifactId>MusicLibraryToolsSpring</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2-5-SNAPSHOT</version>
+	<version>1.2-5</version>
 	<name>MusicLibraryToolsSpring</name>
 	<url>http://www.purplegreen.dk/musiclibrarytoolsspring</url>
 
@@ -13,11 +13,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<springframework.version>5.0.8.RELEASE</springframework.version>
+		<springframework.version>5.1.1.RELEASE</springframework.version>
 		<log4j.version>2.8.2</log4j.version>
 		<xstream.version>1.4.10</xstream.version>
 		<cache-api.version>1.1.0</cache-api.version>
-		<ehcache.version>3.5.2</ehcache.version>
+		<ehcache.version>3.6.1</ehcache.version>
 		<derby.version>10.14.2.0</derby.version>
 		<mysql.version>5.1.46</mysql.version>	
 		<hsql.version>2.4.1</hsql.version>	
