--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>dk.purplegreen.musiclibrary</groupId>
 	<artifactId>MusicLibraryToolsSpring</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2-5</version>
+	<version>1.2-6-SNAPSHOT</version>
 	<name>MusicLibraryToolsSpring</name>
 	<url>http://www.purplegreen.dk/musiclibrarytoolsspring</url>
 
