--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id "org.sonarqube" version "2.6"
 }
 
-version = '1.2.5'
+version = '1.2.6-SNAPSHOT'
 
 apply plugin: 'java'
 sourceCompatibility = 1.8
