--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<springframework.version>5.1.1.RELEASE</springframework.version>
+		<springframework.version>5.1.6.RELEASE</springframework.version>
 		<log4j.version>2.8.2</log4j.version>
-		<xstream.version>1.4.10</xstream.version>
+		<xstream.version>1.4.11.1</xstream.version>
 		<cache-api.version>1.1.0</cache-api.version>
-		<ehcache.version>3.6.1</ehcache.version>
+		<ehcache.version>3.7.0</ehcache.version>
 		<derby.version>10.14.2.0</derby.version>
 		<mysql.version>5.1.46</mysql.version>	
-		<hsql.version>2.4.1</hsql.version>	
-		<activemq.version>5.15.6</activemq.version>
-		<jackson.version>2.9.6</jackson.version>
+		<hsql.version>2.4.1</hsql.version>
+		<spring-data-mongodb.version>1.10.20.RELEASE</spring-data-mongodb.version>		
+		<activemq.version>5.15.9</activemq.version>
+		<jackson.version>2.9.8</jackson.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -72,6 +74,12 @@
 			<version>${springframework.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>${xstream.version}</version>
@@ -98,8 +106,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-			<version>1.10.13.RELEASE</version>
+			<artifactId>spring-data-mongodb</artifactId>			
+			<version>${spring-data-mongodb.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
@@ -122,7 +130,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
